Kubernetes/06-IngressAdvanced/ingress-public.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: public-routing
spec: 
  rules:
    - host: fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-webapp
              service-port: 80
